src/components/page/styles.module.css
@import '../../css/colors.css';
@import '../../css/typography.css';

.floating-header {
  position: absolute;
  top: 0px;
  width: 100%;
}

.banner-photo {
  position: relative;
  top: 0px;
  width: 100%;
  padding-bottom: 20px;
}

.banner-caption {
  text-align: right;
  padding-top: 10px;
  padding-right: 10px;
}

.container {
  background-color: var(--color-memories);
  min-height: 100vh;
  display: flex;
  flex-flow: column nowrap;
  background-size: cover;
  background-position: center;
}

.viewport {
  flex-direction: row;
  flex: 1 0 auto;
  display: flex;
  align-items: stretch;
  justify-content: center;
}

.layout, .full-layout {
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
  align-items: stretch;
  padding-left: 10px;
  padding-right: 10px;
  width: 100%;
}
.layout { max-width: 700px; }
.full-layout { max-width: 1400px; }

.page {
  padding: 10px;
  padding-bottom: 120px;
  flex: 1 0 auto;
}

.sticky-footer {
  flex-shrink: 0;
}

